--- a/src/components/Dashboard.module.css
+++ b/src/components/Dashboard.module.css
@@ -1,3 +1,86 @@
-.db-container {
-    background: #000;
+.d_h1 {
+    font-size: 3.2em;
+    line-height: 1.1;
+    text-align: center;
+    position: sticky;
+    top: 0;
+    background-color: #242424;
+}
+
+.d_main {
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
+
+    color-scheme: light dark;
+    color: rgba(255, 255, 255, 0.87);
+    background-color: #242424;
+
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-text-size-adjust: 100%;
+
+    /* max-width: 800px; */
+    margin: auto;
+    scroll-behavior: smooth;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    padding-left: 500px;
+    padding-right: 500px;
+
+
+
+}
+
+.d_p {
+    background-color: darkslategray;
+    max-width: 70%;
+    padding: 15px;
+    border-radius: 50px;
+}
+
+.d_p span {
+    margin: 5px;
+}
+
+.d_p span:first-child {
+    margin-right: 0;
+}
+
+.d_user_msg {
+    text-align: right;
+    margin-left: 30%;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.d_hide {
+    visibility: hidden;
+    display: none;
+}
+
+.d_form {
+    text-align: center;
+    position: sticky;
+    bottom: 0;
+}
+
+.d_input {
+    width: 40%;
+    height: 40px;
+    border: none;
+    padding: 10px;
+    font-size: 1.2rem;
+    background-color: rgb(28, 23, 23);
+}
+
+.d_input:focus {
+    outline: none;
 }
